<resources>
    <string name="application_name">M-Fire</string>
    <string name="app_name">M-Fire</string>
    <string name="register_now">Register Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="already_user">Already user?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pleasewait" translatable="false">Please wait while loading&#8230;</string>
    <string name="internetconnection">Please check your internet connection</string>
    <string name="server_not_responding">Server not responding&#8230;</string>
    <string name="splash_text">Fire Extinguisher Preventive\nMaintenance Application</string>
    <string name="application_logo">Application logo</string>
    <string name="scan_product">Scan Product</string>
    <string name="hold_the_qr_code_near_mobile">Hold the QR Code near mobile</string>
    <string name="please_scan_the_qr_code_using_mobile">Please scan the QR Code using Mobile</string>
    <string name="share_location_sub_title">We wants to access your location only\nto provide a better experience by\nhelping you find actual details\nof fire extinguisher</string>
    <string name="share_your_location_title">Share Your Location</string>
    <string name="share_location">Share Location</string>
    <string name="home">Home</string>
    <string name="denied_permission">Oops you just denied the permission</string>
    <string name="OTP">ENTER ONE TIME PASSWORD</string>
    <string name="OTPText">One Time Password (OTP) has been sent\n to your **2982, please enter the\n same here to login</string>
    <string name="EditNumber">Edit Number</string>
    <string name="continue_text">CONTINUE</string>
    <string name="didnt_receiveOtp">Didn\'t receive OTP?</string>
    <string name="ResendOtp">Resend OTP</string>
    <string name="continue_to_next">Continue to next</string>
    <string name="verificationCode">Verification Code</string>
    <string name="employee_id">Employee id</string>
    <string name="logout">Logout</string>
    <string name="enter_model_no">Enter Model No.</string>
    <string name="type_here">Type here</string>
    <string name="installation">Installation</string>
    <string name="re_enter_model_no">Re-Enter Model No.</string>
    <string name="f_e_no">F.E.NO</string>
    <string name="get_current_location">Get current location</string>
    <string name="location">Location</string>
    <string name="f_e_type">F.E Type</string>
    <string name="capacity">Capacity</string>
    <string name="mfg_year">Mfg Year</string>
    <string name="empty_cylinder_wt_pressure">Empty Cylinder Wt./Pressure</string>
    <string name="full_cylinder_wt_pressure">Full Cylinder Wt./Pressure</string>
    <string name="net_wt_pressure">Net Wt./Pressure</string>
    <string name="last_date_of_refilling">Last Date of Refilling</string>
    <string name="due_date_of_refilling">Due Date of Refilling</string>
    <string name="last_date_of_hpt">Last Date Of HPT</string>
    <string name="due_date_of_hpt">Due Date Of HPT</string>
    <string name="spare_parts_required">Spare Parts Required</string>
    <string name="remarks">Remarks</string>
    <string name="product_info">Product Info</string>
    <string name="services">Services</string>
    <string name="okay">Okay</string>
    <string name="others">Others</string>
    <string name="service">Service</string>
    <string name="client_name">Client Name</string>
    <string name="select_required_spare_parts">Select Required \n Spare Parts</string>
    <string name="hose_pipe">Hose Pipe</string>
    <string name="hydrant_valve">Hydrant Valve</string>
    <string name="black_cap">Black Cap</string>
    <string name="shunt_wheel">Shunt Wheel</string>
    <string name="hose_box">Hose Box</string>
    <string name="hoses">Hoses</string>
    <string name="glasses">Glasses</string>
    <string name="branch_pipe">Branch Pipe</string>
    <string name="glass_hammer">Glass Hammer</string>
    <string name="observation">Observation</string>
    <string name="action">Action</string>
    <string name="hose_reel">Hose Reel</string>
    <string name="shut_off_nozzel">Shut Off Nozzel</string>
    <string name="ball_valve">Ball Valve</string>
    <string name="jubli_clip">Jubli Clip</string>
    <string name="conecting_ruber_hose">Connecting Rubber Hose</string>
    <string name="buckets">Buckets</string>
    <string name="stand">Stand</string>
    <string name="number_of_fire_buckets">Number of Fire Buckets</string>
    <string name="sand">Sand</string>
    <string name="keys">Keys</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="please_give_the_reason_of_non_servicing">Please give the reason of non servicing</string>
    <string name="done">Done</string>
    <string name="other">Other</string>
    <string name="hpt">HPT</string>
    <string name="refill">Refill</string>
    <string name="non_serviceable_title">Non Serviceable</string>
    <string name="select_client">Select Client</string>
    <string name="select_visit">Select Visit</string>
    <string name="add_new_client">Add New Client</string>
    <string name="submit">Submit</string>
    <string name="hp">HP</string>
    <string name="head">HEAD</string>
    <string name="pump_no">PUMP NO</string>
    <string name="motor_no">MOTOR NO</string>
    <string name="check_list_required">Check List Required</string>
    <string name="check_list_items">Check List Items</string>
    <string name="pump_type">PUMP TYPE</string>
    <string name="kw">KW</string>
    <string name="rpm">RPM</string>
    <string name="replace">Replace</string>
    <string name="title_activity_scan_qr_code">Scan</string>
    <string name="qc_code_close">Close</string>
    <string name="qr_code_select_picture">Picture</string>
    <string name="qr_code_open_flash_light">Open flash light</string>
    <string name="qr_code_close_flash_light">Close Flash Light</string>
    <string name="qr_code_auto_scan_notification">Point at QR code to pay</string>
    <string name="qr_code_notification">Notification</string>
    <string name="qr_code_camera_not_open">Could not open your camera</string>
    <string name="qr_code_positive_button_know">OK</string>
    <string name="qr_code_positive_button_confirm">Confirm</string>
    <string name="qr_code_could_not_read_qr_code_from_picture">Could not read your image.Try another image~</string>
    <string name="qr_code_could_not_read_qr_code_from_scanner">Sorry, could not open scan content</string>
    <string name="qr_code_camera_not_found">Could not detect camera</string>
    <string name="authenticity_msg">Please scan coupon \n to check authenticity</string>
    <string name="non_serviceable">Non Serviceable</string>
    <string name="upload_image">Select image to upload</string>
    <string name="product_image">Product Image</string>
    <string name="client_login">Client Login</string>
    <string name="you_are_a_client">You are a client?</string>
    <string name="login_now">Login Now</string>
    <string name="pressure">Pressure</string>
    <string name="flow">Flow</string>
    <string name="rotation">Rotation</string>
    <string name="moc_body">MOC Body</string>
    <string name="type_of_monitor">Type of Monitor</string>
    <string name="size">Size</string>
    <string name="throw_range">Throw Range</string>
    <string name="foam_tank">Foam Tank</string>
    <string name="foam_inductor">Foam Inductor</string>
    <string name="handle_rotation_wheel">Handle / Rotation Wheel</string>
    <string name="foam_inductor_pipe">Foam Inductor Pipe</string>
    <string name="nozzle_type">Nozzle Type</string>
    <string name="operation_manual_electric">Operation Manual / Electric</string>
    <string name="make">Make</string>
    <string name="siren">Siren</string>
    <string name="cables">Cables</string>
    <string name="specs_of_panel">Specs of Panel</string>
    <string name="type_of_system">Type of System</string>
    <string name="loops_zone">Loop / Zone</string>
    <string name="repeater_panel">Repeater Panel</string>
    <string name="model_no">Model no</string>
    <string name="isolator_module">Isolator Module</string>
    <string name="heat_detector">Heat Detector</string>
    <string name="flame_detector">Flame Detector</string>
    <string name="smoke_detector">Smoke Detector</string>
    <string name="multi_detector">Multi Detector</string>
    <string name="gas_detector">Gas Detector</string>
    <string name="beam_detector">Beam Detector</string>
    <string name="manual_call_point">Manual Call Point</string>
    <string name="hooter_cum_sounder">Hooter Cum Sounder</string>
    <string name="zone_monitor_module">zone monitor module</string>
    <string name="monitor_module">Monitor Module</string>
    <string name="control_module">Control Module</string>
    <string name="power_supply_unit">Power Supply Unit</string>
    <string name="zener_barrier">Zener Barrier</string>
    <string name="battery_backup">Battery Backup</string>
    <string name="type_of_valve">Type of valve</string>
    <string name="moc">MOC</string>
    <string name="spindle">Spindle</string>
    <string name="wheel_lever">Wheel / Lever</string>
    <string name="gasket">gasket</string>
    <string name="gland_packing">Gland Packing</string>
    <string name="drain_valve">Drain Valve</string>
    <string name="qty">Qty</string>
    <string name="pressure_gauge">Pressure Gauge</string>
    <string name="test_valve">Test Valve</string>
    <string name="soleniod_valve_actuator">Soleniod Valve / Actuator</string>
    <string name="internal_disc_flap">Internal Disc / Flap</string>
    <string name="gong_bell">Gong Bell</string>
    <string name="specs_of_suppression_system">Specs of Suppression System</string>
    <string name="specs_of_panel_and_make">Specs of Panel and Make</string>
    <string name="model_no_suppression">Model no Suppression</string>
    <string name="capacity_of_cylinder">Capacity of Cylinder</string>
    <string name="no_of_cylinders">No of Cylinders</string>
    <string name="empty_weight">Empty Weight</string>
    <string name="full_weight">Full Weight</string>
    <string name="suppression_gas_filled">Suppression Gas Filled</string>
    <string name="pressure_gauge_reading">Pressure Gauge Reading</string>
    <string name="electromagnetic_actuator">Electromagnetic Actuator</string>
    <string name="pneumatic_actuator">Pneumatic Actuator</string>
    <string name="pressure_supervisory_switch">Pressure Supervisory Switch</string>
    <string name="flexible_discharge_hose">Flexible Discharge Hose</string>
    <string name="flexible_actuator_hose">Flexible Actuator Hose</string>
    <string name="nozzles_suppression">Nozzles Suppression</string>
    <string name="abort_switch">Abort Switch</string>
    <string name="manifold">Manifold</string>
    <string name="piping">Piping</string>
    <string name="vesda_detector_panel">Vesda Detector / Panel</string>
    <string name="manual_gas_release_switch">Manual Gas Release Switch</string>
    <string name="special_detector">Special Detector</string>
    <string name="life_test">Life Test</string>
    <string-array name="fe_type_item">
        <item>ABC</item>
        <item>CO2</item>
        <item>DCP</item>
        <item>WCO2</item>
        <item>MFOAM</item>
        <item>CLEAN AGENT</item>
    </string-array>
    <string-array name="abc_item">
        <item>1 Kg</item>
        <item>2 Kg</item>
        <item>4 Kg</item>
        <item>6 Kg</item>
        <item>9 Kg</item>
    </string-array>
</resources>