<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_35sdp"
        android:layout_marginRight="@dimen/_35sdp"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:text="@string/please_scan_the_qr_code_using_mobile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@+id/label_title"
        android:gravity="center"
        android:text="@string/hold_the_qr_code_near_mobile"
        android:textAlignment="center"
        android:textColor="@color/sub_title"
        android:textSize="@dimen/_13sdp"/>

    <ImageView
        android:id="@+id/home_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_above="@+id/scan_btn"
        android:layout_below="@+id/label_sub_title"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/home_logo" />

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_back"
        android:text="@string/scan_product"
        android:textAllCaps="true"
        android:textColor="@color/button_text"
        android:textSize="@dimen/_16sdp" />
</RelativeLayout>