<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center"
        android:text="@string/re_enter_model_no"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/model_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/title_label"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/text_view_back"
        android:gravity="center"
        android:hint="@string/type_here"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@+id/model_edit_text"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_back"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@color/button_text"
        android:textSize="@dimen/_16sdp" />

</RelativeLayout>