<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottom_button_layout"
        android:divider="@color/more_divider"
        android:dividerHeight="0.7dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/more_divider"
        android:layout_above="@+id/bottom_button_layout"/>

    <LinearLayout
        android:id="@+id/bottom_button_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:background="@drawable/btn_back"
            android:text="@string/okay"
            android:textAllCaps="true"
            android:textColor="@color/button_text"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/service_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:background="@drawable/blue_btn_back"
            android:text="@string/service"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/not_serviceable_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1.4"
            android:background="@drawable/blue_btn_back"
            android:text="@string/non_serviceable"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
</RelativeLayout>